--- a/config.toml
+++ b/config.toml
@@ -6,13 +6,14 @@ theme = "hugo-theme-cactus-plus"
 googleAnalytics = "your_google_analytics_id"
 # Set the value to true if your site include CJK (Chinese, Japanese, and Korean languages) characters
 hasCJKLanguage = false
+enableInlineShortcodes = true
 
 [params]
 	author = "jkmrto"
 	description = "Personal Web Site"
 	bio = "I am telecommunications enginner who loves to code. "
 
-	twitter = "your_twitter_id"
+	twitter = "jkmrto"
 	facebook = "your_facebook_id"
 
 	enableRSS = false
